# Peter-GUI

./: README.md
build-peter_gui_package-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  peter_gui_package
build-peter_gui_package-Desktop_Qt_6_4_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-8f18390f04e8f9dfd50a.json  directory-.-Debug-91d2f2d4b1a00e9a23ec.json  index-2023-03-22T19-03-29-0418.json  target-peter_gui_package_autogen_timestamp_deps-Debug-00bb0b017a9eff2b4684.json
build-peter_gui_package-Desktop_Qt_6_4_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-ca92f65fc03077af719f.json  codemodel-v2-d6d0270882d53ffa64c5.json  target-peter_gui_package-Debug-35e73121845cde70b0f2.json  target-peter_gui_package_autogen-Debug-562790200e09d97cccf4.json
build-peter_gui_package-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-peter_gui_package-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-peter_gui_package-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.A90C625E0200944A.idx  QMainWindow.A3C9C9F2E14B5E55.idx  QMenuBar.1494896A03A4A64A.idx  QStatusBar.F160AB5BA285A477.idx  QTabBar.15FE0401277650AA.idx  QTabWidget.CB5D674F643B1D85.idx  QVBoxLayout.1BB1E2117A466C8F.idx  QVariant.C8E5FF330D88C2A8.idx  QWidget.09401D9A07A26661.idx  __stddef_max_align_t.h.0AB23AD26C1D3741.idx  alloca.h.B3C3404035C15EA6.idx  atomic_base.h.3A2E72751505F214.idx  cstddef.E24F265AA3562071.idx  cstdint.8EFBCBA3007A64A4.idx  cxxabi_init_exception.h.8655CBBAC3570E80.idx  limits.h.5958F349E7F9AFB7.idx  locale.h.5F1EA2E91D0CD92F.idx  main.cpp.102D7F950D118112.idx  petergui.cpp.FEE7689599362DD8.idx  petergui.h.63A51C076361217A.idx  qaction.h.4ADBB8BDF841E8C2.idx  qalgorithms.h.CFBA38E81FB7E267.idx  qanystringview.h.0D8D260EC44C9414.idx  qapplication.h.AC47D702B8890384.idx  qarraydata.h.07CBBEF76C673D76.idx  qarraydataops.h.2E5F88C28FE93A16.idx  qarraydatapointer.h.B85A0A6CF71B0358.idx  (+139 more)
build-peter_gui_package-Desktop_Qt_6_4_2_GCC_64bit-Debug/peter_gui_package_autogen/: deps  mocs_compilation.cpp
build-peter_gui_package-Desktop_Qt_6_4_2_GCC_64bit-Debug/peter_gui_package_autogen/EWIEGA46WW/: moc_petergui.cpp  moc_petergui.cpp.d
build-peter_gui_package-Desktop_Qt_6_4_2_GCC_64bit-Debug/peter_gui_package_autogen/include/: ui_petergui.h
peter_gui_package/: CMakeLists.txt  main.cpp  package.xml  petergui.cpp  petergui.h  petergui.ui
